--- a/formulario-compra.html
+++ b/formulario-compra.html
@@ -44,9 +44,11 @@
             </p>
         </fieldset>
             <p>
-                <a href="Agradecimiento.html"><input type="submit" value="Realizar Compra"></a>
+                <input type="submit" value="Realizar Compra">
                 <input type="reset" value="Borrar todo">
             </p>
+            <br>
+            <a href="index.html">Volver atras</a>
     </form>
     </fieldset>
 </body>
