--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     <p>
         Somos una reconocida cadena de tiendas de videojuegos y productos relacionados con el gaming distirbuidas por toda España y Reino Unido.
     </p>
-    <h3>Que Ofrecemos</h3>
+    <li><h3>Que Ofrecemos</h3></li>
     <p>
         En cualquiera de nuestras tiendas y redes sociales podrás encontrar ofertas increíbles para tus juegos favoritos, consolas, complementos para tu ordenador e incluso objetos decorativos para tu habitación
         todos estos productos te los ofrecemos con garantía para cualquier altercado o problema que puedas tener con ellos y si quieres máximizar tu experiencia con nosotros y sacarle el máximo partido ya puedes
         volverte nuestro socio creandote tu propia <strong>Tarjeta de GAME</strong>
     </p>
-    <h3>¿Qué es la tarjeta GAME?</h3>
+    <li><h3>¿Qué es la tarjeta GAME?</h3></li>
     <p>
         Esta tarjeta de color negro será tu pequeño amiguito a la hora de comprar en nuestras tiendas, La tarjeta guardará puntos en ella cada vez que compres algo por muy pequeño que sea, dichos puntos podrán
         ser canjeados más tarde y usados como descuentos a la hora de comprar cualquier producto, cuantos más puntos tengas mayor será el descuento.
     </p>
-    <h3>¿Comó se consigue una tarjeta GAME?</h3>
+    <li><h3>¿Comó se consigue una tarjeta GAME?</h3></li>
     <p>
-        Puedes conseguir tu tarjeta de socio en cualquiera de nuestras tiendas o ahora mismo rellenando este formulario con tus datos
+        Puedes conseguir tu tarjeta de socio en cualquiera de nuestras tiendas o ahora mismo rellenando este<br>formulario con tus datos
         <br>
         <br>
         <a href="formulario-tarjeta.html">Crear tarjeta de socio</a>
     </p>
     <h2>Ultimas Novedades</h2>
-    <h3>Enterate de los últimos lanzamientos y dispositivos</h3>
+    <li><h3>Enterate de los últimos lanzamientos y dispositivos</h3></li>
     <br>
         <table>
             <tr>
@@ -50,7 +50,7 @@
                 <td class="Producto"><img src="images/Black-Myth-Wukong-PS5.png"></td>
                 <td class="Producto"><img src="images/astrobot-ps5-juego-fisico-para-playstation-5-version-espanola-garantia-europea-spanish-version-eu-warranty-removebg-preview.png"></td>
                 <td class="Producto"><img src="images/236300.png"></td>
-                <td class="Producto"><img src="images/98C1-3024470392-medium_w640_h480_q75-xboxwarhammer40spacemarine-1702291914.png"></td>
+                <td class="Producto"><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.xtralife.com%2Fproducto%2Fwarhammer-40k-space-marine-2-xbox-series-estandar%2F69690&psig=AOvVaw3PPqS1KI-IUDN6HuGe2ZM9&ust=1733056891064000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKC0xJWKhIoDFQAAAAAdAAAAABAE"><img src="images/98C1-3024470392-medium_w640_h480_q75-xboxwarhammer40spacemarine-1702291914.png"></a></td>
             </tr>
             <tr>
                 <td>79,99€  <br><a href="formulario-compra.html">Comprar</a></td>
@@ -64,23 +64,20 @@
         </table>
     </ul>
 
-    <h2>Nuestras Sedes</h2>
+    <h2>Nuestras Tiendas</h2>
+    <h3 class="Sedes">¡¡¡Cada día nos expandimos más!!! Y todo gracias a ti.</h3>
     <table>
         <tr>
-            <th>Población</th>
-            <th>Dirección</th>
+            <th>País</th>
+            <th>Cantidad</th>
         </tr>
         <tr>
-            <td>Alcázar de San Juan</td>
-            <td>Dirección</td>
+            <td>España</td>
+            <td>272</td>
         </tr>
         <tr>
-            <td>Tomelloso</td>
-            <td>Sur,8</td>
-        </tr>
-        <tr>
-            <td>Manzanares</td>
-            <td>Real, 9</td>
+            <td>Reino Unido</td>
+            <td>265</td>
         </tr>
     </table>
 
