--- a/formulario-tarjeta.html
+++ b/formulario-tarjeta.html
@@ -47,7 +47,7 @@
             </p>
         </fieldset>
             <p>
-                <input type="submit" value="Realizar Compra">
+                <input type="submit" value="Envíar datos">
                 <input type="reset" value="Borrar todo">
             </p>
     </form>
