--- a/formulario-tarjeta.html
+++ b/formulario-tarjeta.html
@@ -9,8 +9,7 @@
 <body>
     <fieldset>
     <h2>Creación de Tarjeta</h2>
-    <p>Rellene el siguiente formulario con sus datos para realizar la compra</p>
-    <p>Si le gustaría tenerla en físico, una vez rellenado vaya a su tienda más cercana si quiere solicitarla en versión física</p>
+    <p>Si le gustaría tener la tarjeta en físico, una vez rellenado el formulario vaya a su tienda más cercana para solicitarla en versión física</p>
     <br>
     <form action="ProcesarTarjeta.php" method="get"> 
         <fieldset>
