--- a/formulario-tarjeta.html
+++ b/formulario-tarjeta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="estilosTarjeta.css">
+    <link rel="stylesheet" type="text/css" href="Estilos/estilosTarjeta.css">
 </head>
 <body>
     <fieldset>
