--- a/formulario-tarjeta.html
+++ b/formulario-tarjeta.html
@@ -49,6 +49,7 @@
                 <input type="submit" value="Envíar datos">
                 <input type="reset" value="Borrar todo">
             </p>
+            <a href="index.html">Volver atras</a>
     </form>
     </fieldset>
 </body>
